updated INDEX.html and added images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<p>Nick "Thaaa Dick" Paisley</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>341 Market</title>
+</head>
+<body>
+  <header>Welcome to the 341 Market!</header>
+    <main>
+      <article>
+        <section>
+        <div id="introduction"></div>
+            <h2>341 Market</h2>
+          <p>We love to ride motorcycles on HWY 341, Push Mountain rd, so much we live here!</p> 
+          <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
+        </div>  
+          <div id="what_we_offer">
+            <h3></h3>These are some of the thing we offer at the Market!</h3>
+            <ul>
+              <li>Ethanol Free Gas</li>
+              <li>Snacks</li>
+              <li>Cold Beer!</li>
+          </ul>
+        </div>
+        <div id"road">  
+        <figure>
+              <img src="/img/store_front.jpg" height="300" width="900" alt="Push Mountain Road"/>
+                    <figcaption>The front of our store!</figcaption>
+                </figure>"
+          </figure>
+          <h2>The famous Push Mountain Road</h2>
+          <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of the Norht and South section.</p>
+          <figure>
+              <img src="/img/road1.jpg" alt="Push Mountain Road"/>
+              <figcaption>North section of Push Mountain Road</figcaption>
+          </figure>
+          <figure>
+              <img src="/img/road2.jpg" alt="Push Mountain Road"/>
+              <figcaption>South section of Push Mountain Road</figcaption>
+            </figure> 
+        </div>
+        </section>
+      </article>  
+</main>
+ 
+    <footer>&copy;341 Market</footer>
+
+
+</body>
+</html>
