added images directory

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         </div>
         <div id"road">  
         <figure>
-              <img src="/img/store_front.jpg" height="300" width="900" alt="Push Mountain Road"/>
-                    <figcaption>The front of our store!</figcaption>
-                </figure>"
+          <img src="/images/store_front.jpg" height="300" width="900" alt="Push Mountain Road"/>
+          <figcaption>The front of our store!</figcaption>
+        </figure>"
           </figure>
           <h2>The famous Push Mountain Road</h2>
           <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of the Norht and South section.</p>
           <figure>
-              <img src="/img/road1.jpg" alt="Push Mountain Road"/>
+              <img src="/images/road1.jpg" alt="Push Mountain Road"/>
               <figcaption>North section of Push Mountain Road</figcaption>
           </figure>
           <figure>
-              <img src="/img/road2.jpg" alt="Push Mountain Road"/>
+              <img src="/images/road2.jpg" alt="Push Mountain Road"/>
               <figcaption>South section of Push Mountain Road</figcaption>
             </figure> 
         </div>
