altered img location

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h2>The famous Push Mountain Road</h2>
           <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of the Norht and South section.</p>
           <figure>
-              <img src="/images/road1.jpg" alt="Push Mountain Road"/>
+              <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" alt="Push Mountain Road"/>
               <figcaption>North section of Push Mountain Road</figcaption>
           </figure>
           <figure>
