altered img location

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
               <li>Cold Beer!</li>
           </ul>
         </div>
-        <div id"road">  
+        <div id="road">  
         <figure>
-          <img src="/images/store_front.jpg" height="300" width="900" alt="Push Mountain Road"/>
+          <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front.jpg?raw=true" height="300" width="900" alt="Push Mountain Road"/>
           <figcaption>The front of our store!</figcaption>
         </figure>"
           </figure>
@@ -37,7 +37,7 @@
               <figcaption>North section of Push Mountain Road</figcaption>
           </figure>
           <figure>
-              <img src="/images/road2.jpg" alt="Push Mountain Road"/>
+              <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road2.jpg?raw=true" alt="Push Mountain Road"/>
               <figcaption>South section of Push Mountain Road</figcaption>
             </figure> 
         </div>
