--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
         <div id="introduction"></div>
             <h2>341 Market</h2>
-          <p>We love to ride motorcycles on HWY 341, Push Mountain rd, so much we live here!</p> 
+          <p>We love to ride motorcycles on HWY 341 so much, we live here!</p> 
           <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
         </div>  
           <div id="what_we_offer">
