--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>341 Market</title>
-</head>
-<body>
-  <header>Welcome to the 341 Market!</header>
-    <main>
-      <article>
-        <section>
-        <div id="introduction"></div>
-            <h2>341 Market</h2>
-          <p>We love to ride motorcycles on HWY 341 so much, we live here!</p> 
-          <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
-        </div>  
-          <div id="what_we_offer">
+  </head>
+  <body>
+    <header>Welcome to the 341 Market!</header>
+      <main>
+        <article>
+          <section>
+            <div id="introduction"></div>
+            <h3>Thanks for stopping by! Read on to learn about our store!</h3>
+            <p>We love to ride motorcycles on HWY 341 so much, we live here!</p> 
+            <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
+            </div>  
+          <section>
+            <div id="what_we_offer">
             <h3></h3>These are some of the thing we offer at the Market!</h3>
             <ul>
               <li>Ethanol Free Gas</li>
               <li>Snacks</li>
               <li>Cold Beer!</li>
-          </ul>
-        </div>
-        <div id="road">  
-        <figure>
-          <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="500" width="900" alt="Push Mountain Road"/>
-          <figcaption>The front of our store!</figcaption>
-        </figure>
-          <h2>The famous Push Mountain Road</h2>
-          <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of the Norht and South section.</p>
+            </ul>
+            </div>
+          </section>
+          <div>
           <figure>
+            <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="500" width="900" alt="Push Mountain Road"/>
+            <figcaption>The front of our store!</figcaption>
+          </figure>
+          </div>
+          <section>
+          <div id="road">  
+            <h2>The famous Push Mountain Road</h2>
+            <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of the North and South section.</p>
+            <figure>
               <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" alt="Push Mountain Road"/>
               <figcaption>North section of Push Mountain Road</figcaption>
-          </figure>
-          <figure>
+            </figure>
+            <figure>
               <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road2.jpg?raw=true" alt="Push Mountain Road"/>
               <figcaption>South section of Push Mountain Road</figcaption>
             </figure> 
-        </div>
-        </section>
-      </article>  
-</main>
+          </div>
+          </section>
+        </article>  
+      </main>
  
-    <footer>&copy;341 Market</footer>
+    <footer>
+        <p>&copy;2019&nbsp;&nbsp;341 Market</p>
+    </footer>
 
 
-</body>
+    </body>
 </html>
