--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>341 Market</title>
+    <link rel="stylesheet" href="normalize.css"
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>Welcome to the 341 Market!</header>
