--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>341 Market</title>
-    <link rel="stylesheet" href="normalize.css"
+    
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -20,7 +20,7 @@
             </div>  
           <section>
             <div id="what_we_offer">
-            <h3></h3>These are some of the thing we offer at the Market!</h3>
+            <h3>These are some of the thing we offer at the Market!</h3>
             <ul>
               <li>Ethanol Free Gas</li>
               <li>Snacks</li>
@@ -36,7 +36,7 @@
           </div>
           <section>
           <div id="road">  
-            <h2>The famous Push Mountain Road</h2>
+            <h3>The famous Push Mountain Road</h3>
             <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of the North and South section.</p>
             <figure>
               <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" alt="Push Mountain Road"/>
