--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <header>Welcome to the 341 Market!</header>
+    <header>
+        <h1>Welcome to the 341 Market!</h1>
+    </header>
       <main>
         <article>
           <section>
