--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h3>Thanks for stopping by! Read on to learn about our store!</h3>
             <p>We love to ride motorcycles on HWY 341 so much, we live here!</p> 
             <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
-            </div>  
+            </div>
+          </section>    
           <section>
             <div id="what_we_offer">
             <h3>These are some of the thing we offer at the Market!</h3>
