--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
           <li>Snacks</li>
           <li>Cold Beer!</li>
         </ul>
-        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true"
-          height="500" width="900" alt="Push Mountain Road" />
+        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="500" width="100" alt="Push Mountain Road" class="center">
           <p class="caption">The front of our store!</p>
       </div>
       <h1>The famous Push Mountain Road</h1>
       <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of
         the North and South section.</p>
-      <div class="image1">
+        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" height="auto" width="auto" alt="Push Mountain Road" class="center">
         <p class="caption">North section of Push Mountain Road</p>
       </div>
-      <div class="image2">
+      <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road2.jpg?raw=true" height="auto" width="auto" alt="Push Mountain Road" class="center">
         <p class="caption">South section of Push Mountain Road</p>
       </div>
       </div>
