--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <main>
     <article>
-      <div class="content"></div>
+      <div class="content">
       <p>We love to ride motorcycles on HWY 341 so much, we live here!</p>
       <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
       <h3>These are some of the thing we offer at the Market!</h3>
@@ -24,6 +24,7 @@
           <li>Snacks</li>
           <li>Cold Beer!</li>
         </ul>
+      </div>  
         <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="500" width="100" alt="Push Mountain Road" class="center">
           <p class="caption">The front of our store!</p>
       </div>
