--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li>Cold Beer!</li>
         </ul>
       </div>  
-        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="500" width="100" alt="Push Mountain Road" class="center">
+        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="auto" width="auto" alt="Push Mountain Road" class="center">
           <p class="caption">The front of our store!</p>
       </div>
       <h1>The famous Push Mountain Road</h1>
