--- a/index.html
+++ b/index.html
@@ -7,35 +7,41 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>341 Market</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet'>
 </head>
 
 <body>
   <header>
     <h1>Welcome to the 341 Market!</h1>
+    
   </header>
   <main>
     <article>
       <div class="content">
-      <p>We love to ride motorcycles on HWY 341 so much, we live here!</p>
-      <p>We've been working hard to renovate the store and make it hospitable for motorcyclists.</p>
-      <h3>These are some of the thing we offer at the Market!</h3>
+        <p>We love to ride motorcycles on HWY 341 so much, we live here!</p>
+        <p>Since we've taken ownership of the store been working hard to renovate and make it hospitable for motorcyclists.</p>
+        <p>Most importantly, Loitering is encouraged!</p>
+        <h2>These are some of the thing we offer at the Market!</h2>
         <ul>
           <li>Ethanol Free Gas</li>
           <li>Snacks</li>
           <li>Cold Beer!</li>
         </ul>
-      </div>  
-        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true" height="auto" width="auto" alt="Push Mountain Road" class="center">
-          <p class="caption">The front of our store!</p>
+      </div>
+      <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/store_front2.jpg?raw=true"
+        height="auto" width="auto" alt="Push Mountain Road" class="center">
+      <p class="caption">The front of our store!</p>
       </div>
       <h1>The famous Push Mountain Road</h1>
-      <p>Our store is located right in the middle of the amazing Push Mountain road. Below are some aerial pictures of
-        the North and South section.</p>
-        <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" height="auto" width="auto" alt="Push Mountain Road" class="center">
-        <p class="caption">North section of Push Mountain Road</p>
+      <p>Our store is located right in the middle of the amazing Push Mountain road. We've got 141 corners in 21 miles!
+      </p>
+      <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" height="auto"
+        width="auto" alt="Push Mountain Road" class="center">
+      <p class="caption">North section of Push Mountain Road</p>
       </div>
-      <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road2.jpg?raw=true" height="auto" width="auto" alt="Push Mountain Road" class="center">
-        <p class="caption">South section of Push Mountain Road</p>
+      <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road2.jpg?raw=true" height="auto"
+        width="auto" alt="Push Mountain Road" class="center">
+      <p class="caption">South section of Push Mountain Road</p>
       </div>
       </div>
       </section>
