more stuff from work

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <article>
       <div class="content">
         <p>We love to ride motorcycles on HWY 341 so much, we live here!</p>
-        <p>Since we've taken ownership of the store been working hard to renovate and make it hospitable for motorcyclists.</p>
+        <p>Since taking ownership of the store, we've been working hard to renovate and make it hospitable for motorcyclists!</p>
         <p>Most importantly, Loitering is encouraged!</p>
         <h2>These are some of the thing we offer at the Market!</h2>
         <ul>
