cleaned up html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
   <header>
     <h1>Welcome to the 341 Market!</h1>
-    
   </header>
   <main>
     <article>
@@ -33,8 +32,7 @@
       <p class="caption">The front of our store!</p>
       </div>
       <h1>The famous Push Mountain Road</h1>
-      <p>Our store is located right in the middle of the amazing Push Mountain road. We've got 141 corners in 21 miles!
-      </p>
+      <p>Our store is located right in the middle of the amazing Push Mountain road. We've got 141 corners in 21 miles!</p>
       <img src="https://github.com/np303/lc101-html-me-something/blob/master/images/road1.jpg?raw=true" height="auto"
         width="auto" alt="Push Mountain Road" class="center">
       <p class="caption">North section of Push Mountain Road</p>
@@ -44,10 +42,8 @@
       <p class="caption">South section of Push Mountain Road</p>
       </div>
       </div>
-      </section>
     </article>
   </main>
-
   <footer>
     <p>&copy;2019&nbsp;&nbsp;341 Market</p>
   </footer>
